--- a/index.html
+++ b/index.html
@@ -4,69 +4,88 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEB STUDIO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!--Top Line-->
-    <header>
-      <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+    <header class="page-header">
+      <nav class="navigation">
+        <a class="logotype link" href="./index.html">
+          Web<span class="logotype-studio">Studio</span>
+        </a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="menu-item">
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="contact-list list">
+          <li class="contact-list-item">
+            <a class="contact-list-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-list-item">
+            <a class="contact-list-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
       <!--Hero image-->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="title-page">
+        <h1 class="name-page">Effective Solutions for Your Business</h1>
+        <button class="button-order-service" type="button">
+          Order Service
+        </button>
       </section>
       <!--Section1-->
-      <section>
-        <h2 hidden>Description</h2>
-        <ul>
+      <section class="benefits-menu">
+        <h2 hidden class="benefits-name">Benefits</h2>
+        <ul class="benefits-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="benefits-menu-list">Strategy</h3>
+            <p class="benefits-menu-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="benefits-menu-list">Punctuality</h3>
+            <p class="benefits-menu-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="benefits-menu-list">Diligence</h3>
+            <p class="benefits-menu-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="benefits-menu-list">Technologies</h3>
+            <p class="benefits-menu-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -74,55 +93,135 @@
         </ul>
       </section>
       <!--Section2-->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="employee-team">
+        <h2 class="employee-page">Our Team</h2>
+        <ul class="employee-list list">
+          <li class="employee-card">
             <img
+              class="employee-img"
               src="./images/our-team/mark-guerrero.jpg"
               alt="mark guerrero"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="employee-name">Mark Guerrero</h3>
+            <p class="employee-position">Product Designer</p>
           </li>
-          <li>
+          <li class="employee-card">
             <img
+              class="employee-img"
               src="./images/our-team/tom-ford.jpg"
               alt="tom ford"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="employee-name">Tom Ford</h3>
+            <p class="employee-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="employee-card">
             <img
+              class="employee-img"
               src="./images/our-team/camila-garcia.jpg"
               alt="camila garcia"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="employee-name">Camila Garcia</h3>
+            <p class="employee-position">Marketing</p>
           </li>
-          <li>
+          <li class="employee-card">
             <img
+              class="employee-img"
               src="./images/our-team/daniel-wilson.jpg"
               alt="daniel wilson"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="employee-name">Daniel Wilson</h3>
+            <p class="employee-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!--Section3-->
+      <section class="directions">
+        <h2 class="directions-work">Our Portfolio</h2>
+        <ul class="directions-list list">
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Banking App</h3>
+            <p class="directions-name">App</p>
+          </li>
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Cashless Payment</h3>
+            <p class="directions-name">Marketing</p>
+          </li>
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Meditation App</h3>
+            <p class="directions-name">App</p>
+          </li>
+        </ul>
+        <ul class="directions-list list">
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/taxi-servise.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Taxi Service</h3>
+            <p class="directions-name">Marketing</p>
+          </li>
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Screen Illustrations</h3>
+            <p class="directions-name">Design</p>
+          </li>
+          <li class="directions-item">
+            <img
+              class="directions-img"
+              src="./images/our-portfolio/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="directions-service">Online Courses</h3>
+            <p class="directions-name">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"> WebStudio </a>
-      <p>
+    <footer class="footer-bottom">
+      <a class="logotype link" href="./index.html">
+        Web<span class="logotype-studio-footer">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
