--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address-list">
         <ul class="contact-list list">
           <li class="contact-list-item">
             <a class="contact-list-link link" href="mailto:info@devstudio.com"
@@ -179,8 +179,6 @@
             <h3 class="directions-service">Meditation App</h3>
             <p class="directions-name">App</p>
           </li>
-        </ul>
-        <ul class="directions-list list">
           <li class="directions-item">
             <img
               class="directions-img"
