--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Top Line-->
     <header class="page-header">
       <nav class="navigation">
-        <a class="logotype link" href="./index.html">
+        <a href="./index.html" class="logotype link">
           Web<span class="logotype-studio">Studio</span>
         </a>
         <ul class="menu list">
