--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </a>
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link" href="">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="">Portfolio</a>
